# mcp-server

./: .coverage  .gitignore  Makefile  README.md  call_tool_request.json  initialize_request.json  pyproject.toml  test_links.md
.cursor/: README.md
.cursor/rules/: workflow.mdc
.cursor/rules/agents/: 1-career-agent.mdc
.cursor/rules_md/: coding_pattern_prefs.md  communication_style_prefs.md  tdd_process.md  workflow.md
.cursor/rules_md/agents/: 2_developer_agent.md
docs/: ag2.4_mcp_concept_research_report.md  ag2.4_mcp_reference_analysis.md  ag2.4_mcp_server_integration_plan.md
docs/plans/: ag2.4_mcp_server_plan.md  project_wide_and_config_scan_plan.md  refactor_link_checker_separate_tools_plan.md
docs/requirements/: link_checker_tool_enhancements_reqs.md
src/mcp_server/: __init__.py  server.py
src/mcp_server/tools/: link_checker.py
tests/: test_link_checker.py  test_server.py
